2006-09-20  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-nio/Makefile.am (libjavanio_la_SOURCES):
	Add gnu_java_nio_channels_FileChannelImpl.c and javanio.h.
	(EXTRA_DIST): Include javanio.c.

2006-09-20  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/geom/RoundRectangle2D.java:
	(getPathIterator): Reimplemented,
	and updated various API doc comments.

2006-09-20  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(addImpl): Set the new component's parent after it has been
	added to the array. Call addNotify() and invalidate()
	after the component has been added, so that the peer
	gets to know about the component structure when it is created.
	* java/awt/Window.java
	(dispatchEventImpl): Only revalidate when window is resized,
	let the other stuff be processed by the superclass.
	(dispose): Post WINDOW_CLOSED event only when some listener
	is registered or event is explicitly enabled.
	(show): Post WINDOW_OPENED event when appropriate.

2006-09-20  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(addNotify): Invalidate here. Fetch peer font.
	(getFont): Delegate to helper method, to protect from
	overriding client code. Lock the tree while fetching the font.
	(getFontImpl): New helper method. Moved code from getFont() in
	here.
	(removeNotify): Nullify peerFont too.
	(setFont): Synchronize on tree and component to avoid threading
	issues. Update the peerFont correctly.
	(validate): Update the peer font if necessary, before validating.
	(getGraphics): Revert to recursive graphics fetching.
	Set component font on the Graphics object.
	(translateEvent): Removed unnecessary cast.
	* java/awt/Container.java
	(invalidateTree): Made final and private. Made implementation
	slightly more efficient.
	(setFont): Get old and new font via getFont() to account for
	the real font, and only invalidate the tree when they are not
	the same and not equal.
	(visitChild): Set the font of the child on the component graphics.